crates/as2_pcode/src/parser/snapshots/rascal_as2_pcode__parser__tests__all_samples@op_precedence__general.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/op_precedence/general.pcode
---
Ok:
  actions:
    - ConstantPool:
        - one
        - two
        - three
        - four
        - five
        - ten
        - zero
        - negOne
        - a
        - b
        - c
        - p
        - s
        - t
        - "one + two * three = "
        - "(one + two) * three = "
        - "-one * two = "
        - "-(one * two) = "
        - "++p + p++ = "
        - "p++ * 2 = "
        - "2 * ++p = "
        - "four / two * two = "
        - "one + two << one = "
        - "(one + two) << one = "
        - "one + (two << one) = "
        - "one + two < five = "
        - "(one + two) < five = "
        - "one + (two < five) = "
        - "one + two == three = "
        - "(one + two) == three = "
        - "one + (two == three) = "
        - "one | two == three = "
        - "(one | two) == three = "
        - "one | (two == three) = "
        - "one & three | two = "
        - "(one & three) | two = "
        - "one & (three | two) = "
        - "~one = "
        - "-~one = "
        - "(one < two && three > two) = "
        - "(one > two || three > two) = "
        - "one & three && two > zero = "
        - "one < two ? five : ten = "
        - "one + two < three ? five : ten = "
        - "a after a = b = c -> "
        - "b after a = b = c -> "
        - "a after a += b * c = "
        - obj
        - Object
        - x
        - "obj.x + two = "
        - "typeof one = "
        - "typeof s = "
        - "a after a = (b>c)?b:c = "
        - "a + b * c << one & three == ((a + (b * c)) << one & three) ? five : ten = "
        - "+one + +two = "
        - "-one + -two = "
        - "ten % three + one = "
        - "(ten % three) + one = "
        - "one + two * three > four = "
    - Push:
        - Constant: 0
    - Push:
        - Integer: 1
    - DefineLocal
    - Push:
        - Constant: 1
    - Push:
        - Integer: 2
    - DefineLocal
    - Push:
        - Constant: 2
    - Push:
        - Integer: 3
    - DefineLocal
    - Push:
        - Constant: 3
    - Push:
        - Integer: 4
    - DefineLocal
    - Push:
        - Constant: 4
    - Push:
        - Integer: 5
    - DefineLocal
    - Push:
        - Constant: 5
    - Push:
        - Integer: 10
    - DefineLocal
    - Push:
        - Constant: 6
    - Push:
        - Integer: 0
    - DefineLocal
    - Push:
        - Constant: 7
    - Push:
        - Integer: -1
    - DefineLocal
    - Push:
        - Constant: 8
    - DefineLocal2
    - Push:
        - Constant: 9
    - DefineLocal2
    - Push:
        - Constant: 10
    - DefineLocal2
    - Push:
        - Constant: 11
    - DefineLocal2
    - Push:
        - Constant: 12
    - Push:
        - Constant: 12
    - DefineLocal
    - Push:
        - Constant: 13
    - Push:
        - Constant: 13
    - DefineLocal
    - Push:
        - Constant: 14
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - Multiply
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 15
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Multiply
    - Add2
    - Trace
    - Push:
        - Constant: 16
    - Push:
        - Integer: 0
    - Push:
        - Constant: 0
    - GetVariable
    - Subtract
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Add2
    - Trace
    - Push:
        - Constant: 17
    - Push:
        - Integer: 0
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Subtract
    - Add2
    - Trace
    - Push:
        - Constant: 11
    - Push:
        - Constant: 0
    - GetVariable
    - SetVariable
    - Push:
        - Constant: 18
    - Push:
        - Constant: 11
    - Push:
        - Constant: 11
    - GetVariable
    - Increment
    - StoreRegister: 0
    - SetVariable
    - Push:
        - Register: 0
    - Push:
        - Constant: 11
    - GetVariable
    - Push:
        - Constant: 11
    - Push:
        - Constant: 11
    - GetVariable
    - Increment
    - SetVariable
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 11
    - Push:
        - Constant: 1
    - GetVariable
    - SetVariable
    - Push:
        - Constant: 19
    - Push:
        - Constant: 11
    - GetVariable
    - Push:
        - Constant: 11
    - Push:
        - Constant: 11
    - GetVariable
    - Increment
    - SetVariable
    - Push:
        - Integer: 2
    - Multiply
    - Add2
    - Trace
    - Push:
        - Constant: 11
    - Push:
        - Constant: 1
    - GetVariable
    - SetVariable
    - Push:
        - Constant: 20
    - Push:
        - Integer: 2
    - Push:
        - Constant: 11
    - Push:
        - Constant: 11
    - GetVariable
    - Increment
    - StoreRegister: 0
    - SetVariable
    - Push:
        - Register: 0
    - Multiply
    - Add2
    - Trace
    - Push:
        - Constant: 21
    - Push:
        - Constant: 3
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Divide
    - Push:
        - Constant: 1
    - GetVariable
    - Multiply
    - Add2
    - Trace
    - Push:
        - Constant: 22
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 0
    - GetVariable
    - BitLShift
    - Add2
    - Trace
    - Push:
        - Constant: 23
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 0
    - GetVariable
    - BitLShift
    - Add2
    - Trace
    - Push:
        - Constant: 24
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 0
    - GetVariable
    - BitLShift
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 25
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 4
    - GetVariable
    - Less2
    - Add2
    - Trace
    - Push:
        - Constant: 26
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 4
    - GetVariable
    - Less2
    - Add2
    - Trace
    - Push:
        - Constant: 27
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 4
    - GetVariable
    - Less2
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 28
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Equals2
    - Add2
    - Trace
    - Push:
        - Constant: 29
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Equals2
    - Add2
    - Trace
    - Push:
        - Constant: 30
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - Equals2
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 31
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - Equals2
    - BitOr
    - Add2
    - Trace
    - Push:
        - Constant: 32
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitOr
    - Push:
        - Constant: 2
    - GetVariable
    - Equals2
    - Add2
    - Trace
    - Push:
        - Constant: 33
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - Equals2
    - BitOr
    - Add2
    - Trace
    - Push:
        - Constant: 34
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - BitAnd
    - Push:
        - Constant: 1
    - GetVariable
    - BitOr
    - Add2
    - Trace
    - Push:
        - Constant: 35
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - BitAnd
    - Push:
        - Constant: 1
    - GetVariable
    - BitOr
    - Add2
    - Trace
    - Push:
        - Constant: 36
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - BitOr
    - BitAnd
    - Add2
    - Trace
    - Push:
        - Constant: 37
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Float: 4294967295
    - BitXor
    - Add2
    - Trace
    - Push:
        - Constant: 38
    - Push:
        - Integer: 0
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Float: 4294967295
    - BitXor
    - Subtract
    - Add2
    - Trace
    - Push:
        - Constant: 39
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Less2
    - PushDuplicate
    - Not
    - If: loc07c1
    - Pop
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Greater
    - Add2
    - Trace
    - Push:
        - Constant: 40
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Greater
    - PushDuplicate
    - If: loc07e9
    - Pop
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Greater
    - Add2
    - Trace
    - Push:
        - Constant: 41
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - BitAnd
    - PushDuplicate
    - Not
    - If: loc0812
    - Pop
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 6
    - GetVariable
    - Greater
    - Add2
    - Trace
    - Push:
        - Constant: 42
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Less2
    - If: loc0836
    - Push:
        - Constant: 5
    - GetVariable
    - Jump: loc083c
    - Push:
        - Constant: 4
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 43
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Push:
        - Constant: 2
    - GetVariable
    - Less2
    - If: loc0867
    - Push:
        - Constant: 5
    - GetVariable
    - Jump: loc086d
    - Push:
        - Constant: 4
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 8
    - Push:
        - Integer: 0
    - SetVariable
    - Push:
        - Constant: 9
    - Push:
        - Integer: 0
    - SetVariable
    - Push:
        - Constant: 10
    - Push:
        - Constant: 4
    - GetVariable
    - SetVariable
    - Push:
        - Constant: 8
    - Push:
        - Constant: 9
    - Push:
        - Constant: 10
    - GetVariable
    - StoreRegister: 0
    - SetVariable
    - Push:
        - Register: 0
    - SetVariable
    - Push:
        - Constant: 44
    - Push:
        - Constant: 8
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 45
    - Push:
        - Constant: 9
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 8
    - Push:
        - Integer: 1
    - SetVariable
    - Push:
        - Constant: 9
    - Push:
        - Integer: 2
    - SetVariable
    - Push:
        - Constant: 10
    - Push:
        - Integer: 3
    - SetVariable
    - Push:
        - Constant: 8
    - Push:
        - Constant: 8
    - GetVariable
    - Push:
        - Constant: 9
    - GetVariable
    - Push:
        - Constant: 10
    - GetVariable
    - Multiply
    - Add2
    - SetVariable
    - Push:
        - Constant: 46
    - Push:
        - Constant: 8
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 47
    - Push:
        - Integer: 0
    - Push:
        - Constant: 48
    - NewObject
    - DefineLocal
    - Push:
        - Constant: 47
    - GetVariable
    - Push:
        - Constant: 49
    - Push:
        - Integer: 2
    - SetMember
    - Push:
        - Constant: 50
    - Push:
        - Constant: 47
    - GetVariable
    - Push:
        - Constant: 49
    - GetMember
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 51
    - Push:
        - Constant: 0
    - GetVariable
    - TypeOf
    - Add2
    - Trace
    - Push:
        - Constant: 52
    - Push:
        - Constant: 12
    - GetVariable
    - TypeOf
    - Add2
    - Trace
    - Push:
        - Constant: 8
    - Push:
        - Integer: 1
    - SetVariable
    - Push:
        - Constant: 9
    - Push:
        - Integer: 2
    - SetVariable
    - Push:
        - Constant: 10
    - Push:
        - Integer: 3
    - SetVariable
    - Push:
        - Constant: 8
    - Push:
        - Constant: 9
    - GetVariable
    - Push:
        - Constant: 10
    - GetVariable
    - Greater
    - If: loc09d3
    - Push:
        - Constant: 10
    - GetVariable
    - Jump: loc09d9
    - Push:
        - Constant: 9
    - GetVariable
    - SetVariable
    - Push:
        - Constant: 53
    - Push:
        - Constant: 8
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 8
    - Push:
        - Integer: 1
    - SetVariable
    - Push:
        - Constant: 9
    - Push:
        - Integer: 2
    - SetVariable
    - Push:
        - Constant: 10
    - Push:
        - Integer: 3
    - SetVariable
    - Push:
        - Constant: 54
    - Push:
        - Constant: 8
    - GetVariable
    - Push:
        - Constant: 9
    - GetVariable
    - Push:
        - Constant: 10
    - GetVariable
    - Multiply
    - Add2
    - Push:
        - Constant: 0
    - GetVariable
    - BitLShift
    - Push:
        - Constant: 2
    - GetVariable
    - BitAnd
    - Push:
        - Constant: 8
    - GetVariable
    - Push:
        - Constant: 9
    - GetVariable
    - Push:
        - Constant: 10
    - GetVariable
    - Multiply
    - Add2
    - Push:
        - Constant: 0
    - GetVariable
    - BitLShift
    - Push:
        - Constant: 2
    - GetVariable
    - BitAnd
    - Equals2
    - If: loc0a6b
    - Push:
        - Constant: 5
    - GetVariable
    - Jump: loc0a71
    - Push:
        - Constant: 4
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 55
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 56
    - Push:
        - Integer: 0
    - Push:
        - Constant: 0
    - GetVariable
    - Subtract
    - Push:
        - Integer: 0
    - Push:
        - Constant: 1
    - GetVariable
    - Subtract
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 57
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - Modulo
    - Push:
        - Constant: 0
    - GetVariable
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 58
    - Push:
        - Constant: 5
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - Modulo
    - Push:
        - Constant: 0
    - GetVariable
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 59
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - GetVariable
    - Multiply
    - Add2
    - Push:
        - Constant: 3
    - GetVariable
    - Greater
    - Add2
    - Trace
  label_positions:
    loc07c1: 342
    loc07e9: 358
    loc0812: 375
    loc0836: 387
    loc083c: 389
    loc0867: 404
    loc086d: 406
    loc09d3: 511
    loc09d9: 513
    loc0a6b: 562
    loc0a71: 564
